--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     padding: 20px;
   }
   .receipt {
-    width: 300px;
+    width: 320px;
     border: 1px solid #ccc;
     padding: 15px;
     background-color: #fff;
@@ -25,6 +25,11 @@
   .item-detail {
     font-size: 12px;
     color: #555;
+    margin-left: 5px;
+  }
+  hr {
+    border: 0.5px solid #ccc;
+    margin: 10px 0;
   }
   button {
     padding: 8px 15px;
@@ -58,7 +63,6 @@ document.getElementById("downloadBtn").addEventListener("click", function() {
     scale: 2,           // 提高清晰度
     useCORS: true       // 跨域圖片支援
   }).then(canvas => {
-    // 生成 PNG
     const link = document.createElement("a");
     link.download = "receipt.png";
     link.href = canvas.toDataURL("image/png");
